--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 atomicwrites==1.4.0
 attrs==21.2.0
+click==8.0.0
 colorama==0.4.4
+Flask==2.0.0
 importlib-metadata==4.0.1
 iniconfig==1.1.1
+itsdangerous==2.0.0
+Jinja2==3.0.0
+MarkupSafe==2.0.0
 packaging==20.9
 pluggy==0.13.1
 py==1.10.0
@@ -10,4 +15,5 @@ pyparsing==2.4.7
 pytest==6.2.4
 toml==0.10.2
 typing-extensions==3.10.0.0
+Werkzeug==2.0.0
 zipp==3.4.1
